@@ -35,9 +35,9 @@ KNOWN PROBLEMS DUE TO NCO:
 
 This section of ANNOUNCE reports and reminds users of the
 existence and severity of known, not yet fixed, problems. 
-These problems occur with NCO 5.2.7 built/tested under
-MacOS 15.4.1 with netCDF 4.10-development on HDF5 1.14.3
-and with Linux FC40 with netCDF 4.9.2 on HDF5 1.14.3.
+These problems occur with NCO 5.3.4 built/tested under
+MacOS 15.4.1 with netCDF 4.10-development on HDF5 1.14.6
+and with Linux FC42 with netCDF 4.9.2 on HDF5 1.14.4.
 
 A. NOT YET FIXED (NCO problem)
    Correctly read arrays of NC_STRING with embedded delimiters in ncatted arguments
